# local_deepseek-r1

./: README.md  app.py  pyproject.toml
